--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
 
-    <script src="./js/task-08.js" type="module"></script>
+    <!-- <script src="./js/task-08.js" type="module"></script> -->
+    <script src="./js/task-08ref.js" type="module"></script>
     <script src="./js/gallery-items.js" type="module"></script>
 </body>
 
